# shop-bot

./: .env  Dockerfile  docker-compose.yml  pyproject.toml
app/: __main__.py  config.py  main.py
app/constants/: admin.py  re_phone.py
app/dialogs/: __init__.py  buy_item.py  category_edit.py  find_item.py  item_acts.py  states.py  utils.py
app/filters/: admin.py
app/handlers/: __init__.py
app/handlers/admins/: __init__.py  broadcast.py  cancel.py  category.py  info.py  item.py  statistics.py
app/handlers/errors/: catcher.py
app/handlers/private/: __init__.py  contact.py  feedback.py  find_item.py  info.py  search.py  start.py
app/handlers/updates/: status.py
app/keyboards/admin/: inline.py  reply.py
app/keyboards/private/: inline.py  reply.py
app/middlewares/: __init__.py  acl.py  clocks.py  db_pool.py  i18n.py  throttling.py
app/services/: fluent.py
app/states/: admin_states.py
app/utils/: broadcast.py  lock_factory.py  logger.py  set_bot_commands.py  sync.py  tools.py
app/utils/markup_constructor/: inline.py
app/utils/misc/: clocks_decorator.py  lock_decorator.py  throttling_decorator.py
locales/: ru.ftl
pgdata/: postmaster.opts  postmaster.pid
pgdata/base/13456/: 2619
pgdata/base/13457/: pg_internal.init
pgdata/base/16384/: 1247  1249  1259  16385  16387  16402  16403  16405  16415  16417  16419  16427  16428  16430  16445  16453  16465  16476  16494  (+31 more)
pgdata/global/: 1260  1262  2671  2672  2676  pg_control  pg_internal.init
pgdata/pg_stat_tmp/: db_0.stat  db_13457.stat  db_16384.stat  global.stat
redis_data/: dump.rdb
(+18 files in other folders)
